Updating tmux colors to standard colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,10 +74,10 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # Set the status line's colors
-set-option -g status-style fg="#EEEEEC",bg=terminal
+set-option -g status-style fg=white,bg=terminal
 
 # Command / message line
-set-option -g message-style fg=black,bg=colour214
+set-option -g message-style fg=black,bg=yellow
 
 # Status line left side
 set-option -g status-left-length 100
@@ -86,18 +86,18 @@ set-option -g status-left ""
 # Status line right side
 # set-option -g status-right "%d-%b-%y %R"
 set-option -g status-right-length 100
-set-option -g status-right '#[fg=colour214,bg=colour235] #H#[fg=colour238]:#[fg=colour178]#S #[fg=#EEEEEC,bg=terminal] %y.%m.%d %R '
+set-option -g status-right '#[fg=yellow,bg=black] #H#[fg=yellow]:#[fg=brightyellow]#S #[fg=white,bg=black] %y.%m.%d %R '
 
 # Window list options 
 set-option -g status-justify left
-set-window-option -g window-status-format '#[fg=colour214,bg=colour235] #I #[fg=white,bg=colour236] #{?window_zoomed_flag,#[fg=colour44](,}#W#{?window_zoomed_flag,#[fg=colour44]),} #{?pane_synchronized,#[fg=brightred](sync) ,}#[default]'
+set-window-option -g window-status-format '#[fg=yellow,bg=black] #I #[fg=white,bg=black] #{?window_zoomed_flag,#[fg=cyan](,}#W#{?window_zoomed_flag,#[fg=cyan]),} #{?pane_synchronized,#[fg=brightred](sync) ,}#[default]'
 set-window-option -g window-status-style bg=default,fg=white,none
-set-window-option -g window-status-current-format '#[fg=black,bg=colour214] #I #[fg=brightwhite,bg=colour238] #{?window_zoomed_flag,#[fg=colour44](,}#W#{?window_zoomed_flag,#[fg=colour44]),} #{?pane_synchronized,#[fg=brightred](sync) ,}#[default]'
+set-window-option -g window-status-current-format '#[fg=black,bg=yellow] #I #[fg=brightwhite,bg=brightblack] #{?window_zoomed_flag,#[fg=cyan](,}#W#{?window_zoomed_flag,#[fg=cyan]),} #{?pane_synchronized,#[fg=brightred](sync) ,}#[default]'
 set-window-option -g window-status-current-style none
 
 # Active terminal yellow border, non-active white
-set-option -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border-style bg=default,fg=colour214
+set-option -g pane-border-style bg=default,fg=brightblack
+set -g pane-active-border-style bg=default,fg=yellow
 
 # Enable activity alerts
 set-option -g monitor-activity on
