Update Rubocop rules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ Metrics/CyclomaticComplexity:
 Metrics/MethodLength:
   Enabled: false
 
+Naming/MethodParameterName:
+  MinNameLength: 1
+
 Style/Documentation:
   Enabled: false
 
